// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timer /> componentDidUpdate function updates the component when set new props 1`] = `
<div>
  <h1>
    Days: 0 - Hours: 0 - Minutes: 59 - Seconds: 56
  </h1>
</div>
`;

exports[`<Timer /> componentDidUpdate function updates the component when set new props 2`] = `
<div>
  <h1>
    Days: 0 - Hours: 0 - Minutes: 29 - Seconds: 56
  </h1>
</div>
`;

exports[`<Timer /> first test 1`] = `
<div>
  <h1 />
</div>
`;

exports[`<Timer /> timer function should match snapshot after Timer finishes 1`] = `
<div>
  <h1>
    Days: 0 - Hours: 0 - Minutes: 0 - Seconds: 0
  </h1>
</div>
`;

exports[`<Timer /> timer function should match snapshot after Timer set to a day and wait 10 seconds 1`] = `
<div>
  <h1>
    Days: 0 - Hours: 23 - Minutes: 59 - Seconds: 51
  </h1>
</div>
`;
